tests/diagnostics/statements/control_flow/missing_return/expect.txt
# exit: 1
input/main.coppice:1:37: error: missing return in function body
  function maybe(x: boolean) -> int64 {
                                      ^
